# wann

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_cases.py  nonlinear-well.nb  test_Runge_Kutta.nb  test_pol_K_singular.nb  wann.cpp  wellbore_1d.py
3d-well/: CMakeLists.txt  wann3d.cpp
conferences/cfc_2025-template-abstract_/: CFC_Abract_WANN.tex  cfc2025.cls
firedrake/: runme2.py
geo/: easyMesh.geo  mesh2D_rev01.geo  mesh2D_rev01.msh  mesh3D_Cyl.geo  mesh3D_reservoirTest.geo  mesh3D_rev01.geo  mesh3D_rev02.msh  mesh3D_rev03.geo  mesh3D_rev03.msh  mesh3D_rev04.geo  mesh3D_rev04.msh  mesh3D_rev05.geo  mesh3D_rev05.msh  mesh3D_rev06.geo  mesh3D_rev06.msh  mesh3D_rev07.geo  mesh3D_rev07.msh  mesh3D_rev08.geo  mesh3D_rev08.msh  mesh_rev00.geo  mesh_rev01.geo  mesh_rev01.msh  radialTest.geo  wellPlusReservoir.geo
geo/old/: beam3d.geo  mesh2D_rev01.geo  mesh3D_rev01.geo  mesh3D_rev02.geo  mesh3D_rev03.geo  mesh3D_rev04.msh  mesh3D_rev05.msh  mesh3D_rev06.geo  mesh3D_rev06.msh  mesh3D_rev07.msh  mesh3D_rev08.geo  mesh3D_rev08_test.geo  mesh_rev01.geo  mesh_rev01.msh
geoNew/: combineMeshes.geo  combined.msh  nearWell.geo  nearWell.msh  nearWellOnly.geo  params.geo  reservoir.msh  reservoirBall.geo  reservoirBox.geo  reservoirBoxStruct.geo  reservoirPill.geo  run_all.py  run_all.sh
input/: combined.msh  easyMesh.json  easyMesh.msh  mesh3D_Cyl.msh  mesh3D_Cyl2.msh  mesh3D_reservoirTest.msh  mesh3D_rev08_test.msh  ozkan1999.json  ozkan1999.msh  ozkan1999Box.json  ozkan1999Box.msh  penmatcha1999.json  penmatcha1999.msh  penmatcha1999b.json  penmatcha1999b.msh  radialTest.json  radialTest.msh  simpleOzkan.json  simpleOzkan.msh  simplestGoalDarcy.json  simplestGoalDarcy.msh  test-sideOrient-1d.json  wann3D_Cyl.json  wann3D_Cyl2.json  wann3D_parameterStudy.json  wann3d.json  wann3d_reservoirTest.json  wann3d_test.json  wellPlusReservoir.msh
mathematica/: NonLinWellCheckReynolds.nb  nonlinear-well-pressure.nb  nonlinear-well-v2.nb  nonlinear-well.nb
pyscripts/: generate_cases.py  wellbore_1d.py
pytorch/: fitK-poly.py  fitK.py  helper_functions.py  knn.py  kpts.txt  legendre-test.py  linear-reg.py  test-saved-nn.py
pytorch/models/: fitK-one-curve.pth
src/: CMakeLists.txt  ProblemData.cpp  ProblemData.h  TPZAnisotropicPermeability.cpp  TPZAnisotropicPermeability.h  TPZNonLinearWellH1.cpp  TPZNonLinearWellH1.h  TPZNonlinearWell.cpp  TPZNonlinearWell.h  TPZWannAdaptivityTools.cpp  TPZWannAdaptivityTools.h  TPZWannAnalysis.cpp  TPZWannAnalysis.h  TPZWannApproxTools.cpp  TPZWannApproxTools.h  TPZWannDarcyNL.cpp  TPZWannDarcyNL.h  TPZWannEstimationTools.cpp  TPZWannEstimationTools.h  TPZWannGeometryTools.cpp  TPZWannGeometryTools.h  TPZWannMixedDarcyNL.cpp  TPZWannMixedDarcyNL.h  TPZWannPostProcTools.cpp  TPZWannPostProcTools.h  TPZWannTools.cpp  TPZWannTools.h  cleanup.sh  dirs_config.h.in  input_config.h  input_config.h.in  runme.py  runme2.py  wellbore_h1.py
targets/: 3Dtest.cpp  CMakeLists.txt  adaptiveRefinement.cpp  darcy3D.cpp  goalOrientedDarcy.cpp  goalOrientedWann.cpp  hanging-nodes-test.cpp  old-wann3d.cpp  radialFlowTest.cpp  test-divide.cpp  test-nonlinear-1d.cpp  test-nonlinear-3d.cpp  test-nonlinear.cpp  test-sideOrient-1d.cpp  testDarcyNL.cpp  wann3d.cpp  wann3dNL.cpp  wann3dRef.cpp  wannParameterStudy.cpp
training/: kpts.txt  kpts_bc.txt  postprocdata.nb  training_data.txt
